# meow-lang

./: .gitignore  CMakeLists.txt  CMakelists.txt  LICENSE.md  Makefile  Meow  Plan.md  README.md  Resources.md  TODO & ERRORS.md  create.sh  example.meow  gitpush.sh  grammer.md  hell  ll.c  main.asm  main.c  main.cpp  main.meow  main.py  make  meowlang_linux  runtest.bat  runtest.sh  test.py  todo.md
asmouput/: output
example/: main.meow
exampleProg/: main.meow
exampleprogs/: add.meow  age.meow  ageCal.meow  ctof.meow  evenOrOdd.meow  heart.meow  palindrome.meow  pattern.meow
include/: audit.hpp  byteblocks.hpp  bytecode.hpp  code.hpp  color.hpp  compiler.hpp  core.hpp  error.hpp  interpreter.hpp  lexer.hpp  map.hpp  parser.hpp  token.hpp  tree.hpp  vm.hpp
include/AST_GEN/: ast_gen.h
include/DS/: dict.h  list.h  tree.h  tree.hpp
include/bltins/: bltins.hpp
include/core/: core.h  core.hpp
include/internals/: README.md  mewcore_ast.hpp  mewcore_constpool.hpp  mewcore_obj.hpp  mewcore_stackframe.hpp  mewdefs.hpp
include/ll/: ll.h
meowlang/: main.cpp
parser/: parser.cpp  parser.hpp
src/: README.md  bytecode.cpp  compiler.cpp  core.cpp  error.cpp  interpreter.cpp  lexer.cpp  main.c  main.cpp  map.cpp  meow.c  parser.cpp  token.cpp  tree.cpp  vm.cpp
test/: arraytest.meow  bltins.meow  buyAndSell.meow  buyAndSell2.meow  class.meow  classtest.meow  error_test.meow  essential.meow  forloop.meow  idxasstest.meow  idxtest.meow  input.meow  main.meow  main2.meow  nveen.meow  prime.meow  recursion.meow  return.meow  something.meow  sorting.meow  test.meow
(+38 files in other folders)
